force-app/main/default/objects/Opportunity/fields/Account_Introduction_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Introduction_Source__c</fullName>
    <description>Was
TEXT(Account.Introductions_Source__c) &amp; &quot;; &quot;&amp; TEXT(Account.Introduction_Subsource__c)</description>
    <formula>TEXT(Account.Introductions_Source__c) &amp; 
IF(ISBLANK(TEXT(Account.Introduction_Subsource__c)),&quot;; &quot;&amp; TEXT(Account.Introduction_Subsource__c),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Introduction Source and Subsource of the Account</inlineHelpText>
    <label>Account Introduction Source</label>
    <type>Text</type>
</CustomField>