force-app/main/default/objects/Opportunity/fields/Acquisition_Cost__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Cost__c</fullName>
    <label>Total Acquisition Cost</label>
    <summarizedField>Property__c.Acquisition_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Property__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Property__c.Is_Parent__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Property__c.Deal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>