force-app/main/default/objects/Opportunity/fields/Acquisition_Cost_Per_Property__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Cost_Per_Property__c</fullName>
    <formula>Acquisition_Cost__c/	Total_Properties__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acquisition Cost Per Property</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>