force-app/main/default/objects/Opportunity/fields/Acquisition_Property_Count__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Property_Count__c</fullName>
    <label>Acquisition Property Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>