force-app/main/default/objects/Opportunity/fields/Actual_DSCR__c.field-meta.xml
<CustomField>
    <fullName>Actual_DSCR__c</fullName>
    <label>Actual DSCR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>