force-app/main/default/objects/Opportunity/fields/Advance_Fee_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Advance_Fee_Remaining__c</fullName>
    <formula>Max_Advance_Fee_formula__c - Aggregate_Advance_Fee_PreAdvance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance Fee Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>