force-app/main/default/objects/Opportunity/fields/Advance_Period__c.field-meta.xml
<CustomField>
    <fullName>Advance_Period__c</fullName>
    <description>Bridge Use</description>
    <label>Advance Period Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>