force-app/main/default/objects/Opportunity/fields/Advance_Period_Days_In_Months__c.field-meta.xml
<CustomField>
    <fullName>Advance_Period_Days_In_Months__c</fullName>
    <formula>IF(Advance_Period__c = 365, &apos;12 months&apos;, IF ( !ISBLANK(Advance_Period__c),

IF(
Advance_Period__c / 30 &gt;= 1,
TEXT(FLOOR(Advance_Period__c / 30)) &amp; IF(Advance_Period__c / 30 &gt;= 2, &apos; months&apos;, &apos; month&apos;), 
&apos;0 months&apos;
)

&amp; 
IF(
MOD(Advance_Period__c,30) &gt; 0,
&apos;, &apos; &amp; TEXT(MOD(Advance_Period__c,30)) &amp; &apos; days&apos;,
&apos;&apos;
)
,

&apos;&apos;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance Period Days In Months</label>
    <type>Text</type>
</CustomField>