force-app/main/default/objects/Opportunity/fields/Advance_Period_Days_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Advance_Period_Days_Picklist__c</fullName>
    <description>Pick list values for Advance Period Days
Not used</description>
    <label>Advance Period Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>90 Days</fullName>
            </value>
            <value>
                <fullName>180 Days</fullName>
            </value>
            <value>
                <fullName>270 Days</fullName>
            </value>
            <value>
                <fullName>365 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>