force-app/main/default/objects/Opportunity/fields/Aggregate_Funding__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Funding__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Bridge Use</description>
    <label>Total Funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>