force-app/main/default/objects/Opportunity/fields/Aggregate_Max_LTV__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Max_LTV__c</fullName>
    <label>Aggregate Max LTV</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>