force-app/main/default/objects/Opportunity/fields/Aggregate_Payoffs__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Payoffs__c</fullName>
    <description>Bridge Use</description>
    <inlineHelpText>Total Amount of Paid Off Assets</inlineHelpText>
    <label>Total Payoffs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>