force-app/main/default/objects/Opportunity/fields/Amortization_Term__c.field-meta.xml
<CustomField>
    <fullName>Amortization_Term__c</fullName>
    <description>Term Use</description>
    <label>Amortization Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 months</fullName>
                <default>true</default>
                <label>0 months</label>
            </value>
            <value>
                <fullName>120 months</fullName>
            </value>
            <value>
                <fullName>180 months</fullName>
            </value>
            <value>
                <fullName>240 months</fullName>
            </value>
            <value>
                <fullName>300 months</fullName>
            </value>
            <value>
                <fullName>360 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>