force-app/main/default/objects/Opportunity/fields/Annual_HOA__c.field-meta.xml
<CustomField>
    <fullName>Annual_HOA__c</fullName>
    <label>Annual HOA</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>