force-app/main/default/objects/Opportunity/fields/Annual_HOA_Per_Property__c.field-meta.xml
<CustomField>
    <fullName>Annual_HOA_Per_Property__c</fullName>
    <formula>Annual_HOA_Sum__c/Total_Properties__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual HOA Per Property</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>