force-app/main/default/objects/Opportunity/fields/Annual_HOA_Sum__c.field-meta.xml
<CustomField>
    <fullName>Annual_HOA_Sum__c</fullName>
    <description>Sum of Annual HOA from Property Details</description>
    <label>Total Annual HOA</label>
    <summarizedField>Property__c.Annual_HOA_Fee__c</summarizedField>
    <summaryFilterItems>
        <field>Property__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Property__c.Is_Parent__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Property__c.Deal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>