force-app/main/default/objects/Opportunity/fields/Annual_Property_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Annual_Property_Insurance__c</fullName>
    <label>Annual Property Insurance</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>