force-app/main/default/objects/Opportunity/fields/Anticipated_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Closing_Date__c</fullName>
    <defaultValue>TODAY()+75</defaultValue>
    <label>Anticipated Closing Date</label>
    <type>Date</type>
</CustomField>