force-app/main/default/objects/Opportunity/fields/Anticipated_IC_Approval__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_IC_Approval__c</fullName>
    <label>Anticipated IC Approval</label>
    <type>Date</type>
</CustomField>