force-app/main/default/objects/Opportunity/fields/Appraisal_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAB Use</description>
    <inlineHelpText>The Appraisal has been ordered and paid for by the Borrower</inlineHelpText>
    <label>Appraisal Ordered</label>
    <type>Checkbox</type>
</CustomField>