force-app/main/default/objects/Opportunity/fields/Appraisal_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Ordered_Date__c</fullName>
    <description>SAB Use</description>
    <label>Appraisal Ordered Date</label>
    <type>Date</type>
</CustomField>