force-app/main/default/objects/Opportunity/fields/Approval_Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Email_Status__c</fullName>
    <label>Approval Email Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>