force-app/main/default/objects/Opportunity/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>Pricing Request Approval Status</description>
    <inlineHelpText>Pricing Request Approval Status</inlineHelpText>
    <label>Pricing Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Standard Pricing - Approval Not Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>