force-app/main/default/objects/Opportunity/fields/Approved_by_Capital_Markets_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Capital_Markets_Date__c</fullName>
    <description>Date that Capital Markets approved the Pricing Request</description>
    <inlineHelpText>Date that Capital Markets approved the Pricing Request</inlineHelpText>
    <label>Approved by Capital Markets Date</label>
    <type>Date</type>
</CustomField>