force-app/main/default/objects/Opportunity/fields/Approved_by_Underwriter__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Underwriter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User who approved the Pricing Request</inlineHelpText>
    <label>Approved by Underwriter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deals4</relationshipName>
    <type>Lookup</type>
</CustomField>