force-app/main/default/objects/Opportunity/fields/Approved_by_Underwriter_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Underwriter_Date__c</fullName>
    <description>Date that Underwriting approved the Pricing Request</description>
    <inlineHelpText>Date that Underwriting approved the Pricing Request</inlineHelpText>
    <label>Approved by Underwriter Date</label>
    <type>Date</type>
</CustomField>