force-app/main/default/objects/Opportunity/fields/Approved_Term_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Approved_Term_Sheet__c</fullName>
    <label>Approved Term Sheet</label>
    <length>30</length>
    <type>Text</type>
</CustomField>