force-app/main/default/objects/Opportunity/fields/Approved_Term_Sheet_Name__c.field-meta.xml
<CustomField>
    <fullName>Approved_Term_Sheet_Name__c</fullName>
    <label>Approved Term Sheet Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>