force-app/main/default/objects/Opportunity/fields/Approved_Third_Party_Originators__c.field-meta.xml
<CustomField>
    <fullName>Approved_Third_Party_Originators__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which Lender the Loan is purchased from</description>
    <inlineHelpText>Which Lender the Loan is purchased from</inlineHelpText>
    <label>Approved Third Party Originator</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deals (Approved Third Party Originators)</relationshipLabel>
    <relationshipName>PurchasedDeals</relationshipName>
    <type>Lookup</type>
</CustomField>