force-app/main/default/objects/Opportunity/fields/Approved_With_Exception__c.field-meta.xml
<CustomField>
    <fullName>Approved_With_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the Deal was approved into Underwriting, but with an exception</inlineHelpText>
    <label>Approved With Exception</label>
    <type>Checkbox</type>
</CustomField>