force-app/main/default/objects/Opportunity/fields/Are_Assets_Being_RFNC_From_Existing_Term__c.field-meta.xml
<CustomField>
    <fullName>Are_Assets_Being_RFNC_From_Existing_Term__c</fullName>
    <description>Indicates if Assets/Properties on this Term Loan are being refinanced from another Term Loan</description>
    <inlineHelpText>Indicate if Assets/Properties on this Term Loan are being refinanced from another Term Loan</inlineHelpText>
    <label>Are Assets Being RFNC From Existing Term</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Term_Borrower__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>