force-app/main/default/objects/Opportunity/fields/Are_Assets_Coming_Off_Bridge_Line__c.field-meta.xml
<CustomField>
    <fullName>Are_Assets_Coming_Off_Bridge_Line__c</fullName>
    <description>Term Use
Indicates if the Properties being added to a Term Deal and coming from a previous Bridge Loan</description>
    <label>Are Assets Coming Off Bridge Line?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Bridge_Borrower__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>