force-app/main/default/objects/Opportunity/fields/Asset_Management_Comments__c.field-meta.xml
<CustomField>
    <fullName>Asset_Management_Comments__c</fullName>
    <description>Used by AM Team.</description>
    <label>Comments AM</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>