force-app/main/default/objects/Opportunity/fields/Asset_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Asset_Maturity__c</fullName>
    <label>Asset Maturity Days</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>180 day</fullName>
            </value>
            <value>
                <fullName>210 day</fullName>
            </value>
            <value>
                <fullName>240 day</fullName>
            </value>
            <value>
                <fullName>270 day</fullName>
            </value>
            <value>
                <fullName>360 day</fullName>
            </value>
            <value>
                <fullName>365 day</fullName>
            </value>
            <value>
                <fullName>450 day</fullName>
            </value>
            <value>
                <fullName>455 day</fullName>
            </value>
            <value>
                <fullName>540 day</fullName>
            </value>
            <value>
                <fullName>720 day</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>