force-app/main/default/objects/Opportunity/fields/Asset_Unit_Count_Max__c.field-meta.xml
<CustomField>
    <fullName>Asset_Unit_Count_Max__c</fullName>
    <description>Max Unit Count for Properties on a Credit Line.  20 Units is standard, anything higher will be decided upon Pricing Approval</description>
    <inlineHelpText>Max Unit Count for Properties on a Credit Line.  20 Units is standard, anything higher will be decided upon Pricing Approval</inlineHelpText>
    <label>Asset Unit Count Max</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>