force-app/main/default/objects/Opportunity/fields/Assigned_To_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Current_User__c</fullName>
    <formula>OR(Underwriter__c = $User.Id, Closer__c = $User.Id, Loan_Coordinator__c = $User.Id, OwnerId = $User.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To Current User</label>
    <type>Checkbox</type>
</CustomField>