force-app/main/default/objects/Opportunity/fields/Assignments_Sent_to_Title__c.field-meta.xml
<CustomField>
    <fullName>Assignments_Sent_to_Title__c</fullName>
    <description>Used by Bridge Post Closing</description>
    <label>Assignments Sent to Title</label>
    <type>Date</type>
</CustomField>