force-app/main/default/objects/Opportunity/fields/Authorized_Signor__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signor__c</fullName>
    <label>Authorized Signor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>