force-app/main/default/objects/Opportunity/fields/Average_Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Average_Acquisition_Date__c</fullName>
    <description>Not used</description>
    <label>Average Acquisition Date By Unit</label>
    <type>Date</type>
</CustomField>