force-app/main/default/objects/Opportunity/fields/Average_Acquisition_Date_By_Property__c.field-meta.xml
<CustomField>
    <fullName>Average_Acquisition_Date_By_Property__c</fullName>
    <label>Average Acquisition Date By Property</label>
    <type>Date</type>
</CustomField>