force-app/main/default/objects/Opportunity/fields/Average_Cap_Ex_Per_Asset__c.field-meta.xml
<CustomField>
    <fullName>Average_Cap_Ex_Per_Asset__c</fullName>
    <defaultValue>IF($RecordType.Name == &apos;Term Loan&apos;, 600, NULL )</defaultValue>
    <description>Term Use</description>
    <inlineHelpText>Min $600/asset</inlineHelpText>
    <label>Average Cap-Ex Per Asset</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>