force-app/main/default/objects/Opportunity/fields/Average_Lease_Term__c.field-meta.xml
<CustomField>
    <fullName>Average_Lease_Term__c</fullName>
    <defaultValue>IF($RecordType.Name == &apos;Term Loan&apos;, 36, NULL )</defaultValue>
    <description>Term Use</description>
    <inlineHelpText>Average Lease Term in months</inlineHelpText>
    <label>Average Lease Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>