force-app/main/default/objects/Opportunity/fields/Average_Maintenance_Per_Asset__c.field-meta.xml
<CustomField>
    <fullName>Average_Maintenance_Per_Asset__c</fullName>
    <defaultValue>IF($RecordType.Name == &apos;Term Loan&apos;, 720, NULL )</defaultValue>
    <description>Term Use</description>
    <inlineHelpText>Annual cost per asset</inlineHelpText>
    <label>Average Maintenance Per Asset</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>