force-app/main/default/objects/Opportunity/fields/Average_Rent_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Average_Rent_Per_Unit__c</fullName>
    <description>Average Rent per unit</description>
    <formula>Total_Monthly_Rent__c / Total_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Rent Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>