force-app/main/default/objects/Opportunity/fields/Awaiting_Kickoff_Call__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Kickoff_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used when Deal is moved into Underwriting and need to schedule a kick off.</description>
    <label>Awaiting Kickoff Call</label>
    <type>Checkbox</type>
</CustomField>