force-app/main/default/objects/Opportunity/fields/base64_Id__c.field-meta.xml
<CustomField>
    <fullName>base64_Id__c</fullName>
    <label>base64_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>