force-app/main/default/objects/Opportunity/fields/Borrower_Entity__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Borrowing Entity</inlineHelpText>
    <label>Borrower Entity</label>
    <referenceTo>Business_Entity__c</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>Deals</relationshipName>
    <type>Lookup</type>
</CustomField>