force-app/main/default/objects/Opportunity/fields/Borrower_Est_Value_Per_Property__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Est_Value_Per_Property__c</fullName>
    <formula>Total_Borrower_Estimated_Value__c/Total_Properties__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Borrower Est. Value Per Property</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>