force-app/main/default/objects/Opportunity/fields/Borrower_Name_SR__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Name_SR__c</fullName>
    <label>Borrower Name (SR)</label>
    <length>75</length>
    <type>Text</type>
</CustomField>