force-app/main/default/objects/Opportunity/fields/Borrowing_Entity_Name_SR__c.field-meta.xml
<CustomField>
    <fullName>Borrowing_Entity_Name_SR__c</fullName>
    <description>For OpenClose Integration</description>
    <label>Borrowing Entity Name (SR)</label>
    <length>95</length>
    <type>Text</type>
</CustomField>