force-app/main/default/objects/Opportunity/fields/Bridge_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Borrower__c</fullName>
    <description>Term Use
Indicates if this Borrower has had a Bridge Loan with CoreVest</description>
    <inlineHelpText>Indicates if this Borrower has had a Bridge Loan with CoreVest</inlineHelpText>
    <label>Bridge Borrower</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>