force-app/main/default/objects/Opportunity/fields/Broker_Fee_Formula__c.field-meta.xml
<CustomField>
    <fullName>Broker_Fee_Formula__c</fullName>
    <formula>/*IF(MOD(Broker_Fees__c * 100,100) &gt; 0, TEXT(Broker_Fees__c * 100), (TEXT(Broker_Fees__c * 100) + &apos;.000&apos; )) 
Broker_Fees__c * 100 */ 

IF(CONTAINS(TEXT(Broker_Fees__c * 100), &quot;.&quot;), 
LEFT(TEXT(Broker_Fees__c * 100), FIND(&quot;.&quot;, TEXT(Broker_Fees__c * 100)) -1) &amp; 
&quot;.&quot; &amp; 
RPAD(MID(TEXT(ROUND(Broker_Fees__c * 100, 3)), 
FIND(&quot;.&quot;, TEXT(Broker_Fees__c * 100))+1, 
3), 
3, 
&quot;0&quot;), 
TEXT(Broker_Fees__c * 100) &amp; &quot;.000&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Fee Formula</label>
    <type>Text</type>
</CustomField>