force-app/main/default/objects/Opportunity/fields/Broker_Fee_Paid_By_Whom__c.field-meta.xml
<CustomField>
    <fullName>Broker_Fee_Paid_By_Whom__c</fullName>
    <label>Broker Fee Paid By Whom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Broker_Fee_Paid_By_Whom</valueSetName>
    </valueSet>
</CustomField>