force-app/main/default/objects/Opportunity/fields/Broker_Fee_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Broker_Fee_Paid_Date__c</fullName>
    <inlineHelpText>Indicates when the Broker Fee/YSP has been paid to the Broker</inlineHelpText>
    <label>Broker Fee Paid Date</label>
    <type>Date</type>
</CustomField>