force-app/main/default/objects/Opportunity/fields/Broker_Fees__c.field-meta.xml
<CustomField>
    <fullName>Broker_Fees__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field was created to replace the old Broker Fees field.  The previous field was a text field and needed to be standardized as a %.</description>
    <label>Broker Fee %</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>