force-app/main/default/objects/Opportunity/fields/Broker_Fees_and_or_YSP__c.field-meta.xml
<CustomField>
    <fullName>Broker_Fees_and_or_YSP__c</fullName>
    <label>Broker Fee Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>