force-app/main/default/objects/Opportunity/fields/Broker_Fees_In_Words__c.field-meta.xml
<CustomField>
    <fullName>Broker_Fees_In_Words__c</fullName>
    <description>To display the Broker fees in Text value</description>
    <label>Broker Fees In Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>