force-app/main/default/objects/Opportunity/fields/Broker_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Broker_Involvement__c</fullName>
    <businessOwnerGroup>Originations</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Broker on the Deal should be included in all Email correspondences with the Sponsor(s)</description>
    <inlineHelpText>Indicates if the Broker on the Deal should be included in all Email correspondences with the Sponsor(s)</inlineHelpText>
    <label>Include Broker in Email Correspondence?</label>
    <type>Checkbox</type>
</CustomField>