force-app/main/default/objects/Opportunity/fields/Business_Plan__c.field-meta.xml
<CustomField>
    <fullName>Business_Plan__c</fullName>
    <description>Coverage ratio based off clients’ annual acquisition plan.</description>
    <inlineHelpText>Coverage ratio based off clients’ annual acquisition plan.</inlineHelpText>
    <label>Business Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>