force-app/main/default/objects/Opportunity/fields/Bypass_To_Underwriting__c.field-meta.xml
<CustomField>
    <fullName>Bypass_To_Underwriting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this Deal bypassed the Term Sheet approval</description>
    <inlineHelpText>Indicates that this Deal bypassed the Term Sheet approval</inlineHelpText>
    <label>Term Sheet Approval Bypassed</label>
    <type>Checkbox</type>
</CustomField>